# cardboard_plus_plus

./: .gitignore  .project  README.md  build.gradle
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: eye.frag  left_eye.vert  right_eye.vert  tri.frag.spv  tri.vert  tri.vert.spv
app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  CardboardRenderer.cpp  CardboardRenderer.hpp  CreateShaderModule.cpp  CreateShaderModule.h  Device.cpp  Device.hpp  Geometry.cpp  Geometry.hpp  ThreadPool.cpp  ThreadPool.hpp  VulkanAndroid.cpp  VulkanAndroid.hpp  VulkanMain.cpp  validations.hpp
app/src/main/java/com/cbpp/cardboard/: BluetoothLeService.java  CardboardActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
